adds changes